<resources>
    <string name="app_name">MySudoku</string>
    <string name="btnRestart">Restart</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="btnTest">テスト</string>
    <string name="btnStart">Start</string>
    <string name="btnOptns">Options</string>
    <string name="btnAbout">About</string>
    <string name="btnMainMenu">Main menu</string>
</resources>
