<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/btnOptns"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/btnOptns"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAbout"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/btnAbout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOptns" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/btnStart"
        app:layout_constraintBottom_toTopOf="@+id/btnOptns"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>